Session-21 (Final DevOps Project & Troubleshooting)/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskboard
  namespace: final-devops
  labels:
    app.kubernetes.io/name: taskboard
    app.kubernetes.io/part-of: final-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: taskboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: taskboard
        app.kubernetes.io/part-of: final-devops
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: taskboard
          image: final-devops-taskboard:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: runtime-tmp
              mountPath: /tmp
            - name: task-data
              mountPath: /data
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: runtime-tmp
          emptyDir: {}
        - name: task-data
          persistentVolumeClaim:
            claimName: taskboard-data
