Session-21 (Final DevOps Project & Troubleshooting)/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskboard
  namespace: final-devops
  labels:
    app.kubernetes.io/name: taskboard
spec:
  selector:
    app.kubernetes.io/name: taskboard
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
