Session-21 (Final DevOps Project & Troubleshooting)/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskboard
  namespace: final-devops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: taskboard.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskboard
                port:
                  name: http
